--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,19 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Barlow:400,500,700,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" href="images/favicon.png">
     <title>Zavizenov Gleb</title>
 </head>
 <body>
+    {{!-- Header --}}
     <header>
-
+        <div class="header-container">
+            <a href="/" class="header-logo">
+                <img src="images/logo.svg" alt="logo">
+            </a>
+            <div class="header-nav">
+                <a href="/" class="header-nav-link">Home</a>
+                <a href="/portfolio" class="header-nav-link">Portfolio</a>
+                <a href="/about" class="header-nav-link">About Me</a>
+            </div>
+            <div class="header-burger">
+                <img src="images/burger.svg" alt="burger menu">
+            </div>
+        </div>
     </header>
-
+    {{!-- Main --}}
     <main>
         {{{ body }}}
     </main>
+    {{!-- Footer --}}
+    <footer>
 
+    </footer>
+    {{!-- Scripts --}}
     <script src="js/main.js"></script>
 </body>
 </html>
