Finished mobile version

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -19,7 +19,7 @@
                     <div class="right-buttons-contact">
                         <p>CONTACT ME</p>
                     </div>
-                    <div href="" class="right-buttons-view">
+                    <div class="right-buttons-view">
                         <p>VIEW SHOWREEL</p>
                     </div>
                 </div>
