--- a/sass/modules/_home.scss
+++ b/sass/modules/_home.scss
@@ -30,6 +30,25 @@ main{
     align-items: center;
 }
 
+// For small phones
+@media screen and (max-height:645px){
+    .home-container{
+        margin-bottom: 60px;
+    }
+}
+
+@media (min-height: 650px) and (max-height:690px){
+    .home-container{
+        margin-bottom: 50px;
+    }
+}
+
+@media screen and (min-height: 700px) and (max-height:800px){
+    .home-container{
+        margin-bottom: 25px;
+    }
+}   
+
 .home-left{
     width:100%;
     display: flex;
@@ -37,7 +56,7 @@ main{
     justify-content: center;
 
     img{
-        width:300px;
+        width:100%;
     }
 }
 
@@ -46,4 +65,91 @@ main{
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.home-right-heading{
+    font-size: 36px;
+    font-family: "Barlow";
+    font-weight: 500;
+    color: $black;
+    margin-top:0px;
+}
+
+.home-right-title{
+    font-size: 14px;
+    font-family: "Montserrat";
+    font-weight:300;
+    color: $black;     
+    margin-top:9px;
+}
+
+.home-right-quote{
+    display: none;
+}
+
+.home-right-buttons{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top:35px;
+}
+
+.right-buttons-contact{
+    width:250px;
+    height:50px;
+    background-color: $green;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.7s all ease-in-out;
+
+    p{
+        font-size: 16px;
+        font-family: "Montserrat";
+        font-weight:500;
+        color: $grey;        
+        text-align: center;
+    }
+}
+
+.right-buttons-contact:hover{
+    box-shadow: 0px 0px 8.5px 1.5px rgba(145, 225, 158, 0.5); 
+}
+
+.right-buttons-view{
+    width:250px;
+    height:50px;
+    border: 1px solid $black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.7s all ease-in-out;
+    margin-top:15px;
+
+    p{
+        font-size: 16px;
+        font-family: "Montserrat";
+        font-weight:500;
+        color: $black;        
+        text-align: center;
+        transition: 0.7s all ease-in-out;
+    }
+}
+
+.right-buttons-view:hover{
+    background-color: $black;
+
+    p{
+        color: $grey;
+    }
+}
+
+// 
+// Styles for the tablet version
+// 
+@media screen and (min-width:720px){
+
+    .home-container{
+        width:718px;
+    }
 }
