--- a/sass/modules/_home.scss
+++ b/sass/modules/_home.scss
@@ -113,7 +113,7 @@ main{
 }
 
 .right-buttons-contact:hover{
-    box-shadow: 0px 0px 8.5px 1.5px rgba(145, 225, 158, 0.5); 
+    box-shadow: 0px 0px 8.5px 1.5px rgba(145, 225, 158, 0.7); 
 }
 
 .right-buttons-view{
@@ -205,5 +205,100 @@ main{
 // Styles for the desktop version
 // 
 @media screen and (min-width:1200px){
+    main{
+        overflow:hidden;
+    }
+
+    .home-lines{
+        width:1200px;
+        background: url("../images/desktop-grid.png");
+    }
+
+    .home-container{
+        width:1198px;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .home-left{
+        width:599px;
+
+        img{
+            width:100%;
+        }
+    }
+
+    .home-right{
+        width:599px;
+    }
+
+    .home-right-heading{
+        font-size:82px;
+    }
+
+    .home-right-quote{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width:550px;
+        margin-top:40px;
+    }
+
+    .home-right-quotemarks{
+        width:100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+
+        img{
+            width:20px;
+        }
+    }
     
+    .home-right-quote-text{
+        font-size: 20px;
+        font-family: "Montserrat";
+        font-weight: 400;
+        width:510px;
+        color: $black;
+        line-height: 1.5;
+        text-align: center;  
+        margin-top:15px;       
+    }
+
+    .home-rigth-quote-author{
+        font-size: 20px;
+        font-family: "Montserrat";
+        font-weight: 400;
+        color: $black;
+        margin-top:25px;
+    }
+
+    .home-right-buttons{
+        margin-top:65px;
+        width:500px;
+        padding-left: 1px;
+    }
+
+    .right-buttons-contact{
+        width:230px;
+        height:55px;
+        cursor: pointer;
+
+        p{
+            font-size:16px;
+        }
+    }
+
+    .right-buttons-view{
+        width:230px;
+        height:55px;
+        cursor: pointer;
+
+        p{
+            font-size:16px;
+        }
+    }
 }
