Finsihed mobile version of projects page

--- a/sass/modules/_home.scss
+++ b/sass/modules/_home.scss
@@ -1,12 +1,12 @@
 //
 // Styles for the mobile version
 // 
-body{
+.home-body{
     width:100%;
     height: 100vh;
 }
 
-main{
+.home-main{
     width:100%;
     height:100vh;
     display: flex;
