--- a/views/adaptive-layout.hbs
+++ b/views/adaptive-layout.hbs
@@ -11,7 +11,7 @@
     <link rel="icon" href="images/favicon.png">
     <title>Zavizenov Gleb</title>
 </head>
-<body class="home-body">
+<body class="adaptive-body">
     {{!-- Header --}}
     <header>
         <div class="header-container">
@@ -29,7 +29,7 @@
         </div>
     </header>
     {{!-- Main --}}
-    <main class="home-main">
+    <main class="adaptive-main">
         {{{ body }}}
     </main>
     {{!-- Footer --}}
