--- a/sass/modules/_projects.scss
+++ b/sass/modules/_projects.scss
@@ -1,7 +1,6 @@
 // 
 // Styles for the mobile version
 // 
-
 .adaptive-body{
     width:100%;
     height:100%;
@@ -103,3 +102,49 @@
         color: $grey;        
     }
 }
+
+// 
+// Styles for the tablet version
+// 
+@media screen and (min-width:720px){
+    .projects-lines{
+        width:720px;
+        background: url("../images/tablet-grid.png");
+        background-size: cover;
+    }
+    
+    .projects-container{
+        width:718px;
+        margin-top:130px;
+        margin-bottom: 140px;
+        flex-direction: row;
+        flex-wrap: wrap;
+
+        :nth-child(1){
+            width:100%;
+        }
+    }
+    
+    .projects-block{
+        width:50%;
+        height:280px;
+    }
+    
+    .projects-block-popup-title{
+        font-size: 40px;   
+    }
+    
+    .projects-block-popup-subtitle{
+        font-size: 16px;
+    }
+    
+    .projects-block-popup-button{
+        div{
+            text-align: center;       
+        }
+    }
+}
+
+// 
+// Styles for the desktop version
+//
