--- a/sass/modules/_nav-bar.scss
+++ b/sass/modules/_nav-bar.scss
@@ -105,3 +105,11 @@ header{
         width:1198px;
     }
 }
+
+//
+// Additional styles for the project page
+.project-body{
+    .header-nav-link{
+        color:$grey;
+    }
+}
