--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -5,7 +5,7 @@
             <div class="projects-block-popup">
                 <h2 class="projects-block-popup-title">{{project_name}}</h2>
                 <h4 class="projects-block-popup-subtitle">{{project_type}}</h4>
-                <a href="{{ID}}" class="projects-block-popup-button">
+                <a href="projects/{{ID}}" class="projects-block-popup-button">
                     <div>LEARN MORE</div>
                 </a>
             </div>
