--- a/sass/modules/_project.scss
+++ b/sass/modules/_project.scss
@@ -181,3 +181,87 @@
         margin-bottom: 180px;
     }
 }
+
+// 
+// Styles for the desktop version
+// 
+@media screen and (min-width:1200px){
+    .project-body{
+        height:100%;
+        width:100%;
+    }
+
+    .project-main{
+        height:100%;
+        width:100%;
+    }
+
+    .project-box{
+        width:100vw;
+    }
+
+    .project-cover{
+        width:100%;
+        height: 500px;
+
+        img{
+            width:100%;
+        }
+    }
+
+    .project-lines{
+        width:1200px;
+        background: url(../images/desktop-grid.png);
+    }
+
+    .project-container{
+        width:1198px;
+    }
+
+    .project-info{
+        width:100%;
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: space-between;
+    }
+
+    .project-info-left{
+        width: 840px;
+        align-items: flex-start;
+    }
+
+    .project-info-left-desc{
+        font-size:20px;
+        width:800px;
+        text-align: left;
+    }
+
+    .project-info-right{
+        margin-top:0px;
+        width:299px;
+        align-items: flex-start;
+    }
+
+    .project-info-right-line{
+        width:299px;
+    }
+
+    .project-info-right-block{
+        width:299px;
+        align-items: flex-start;
+    }
+
+    .project-info-right-block-title{
+        font-size:30px;
+    }
+
+    .project-info-right-block-desc{
+        font-size:20px;
+        margin-top:15px;
+    }
+
+    .project-showcase{
+        margin-top:65px;
+    }
+}
