Finished mobile version for About page

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @import 'modules/_home';
 @import 'modules/_projects';
 @import 'modules/_project';
+@import 'modules/_about';
 
 // Importing modules
 @import 'modules/_nav-bar';
