Finished slider on the about page

--- a/sass/modules/_about.scss
+++ b/sass/modules/_about.scss
@@ -192,6 +192,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    transition: 0.7s left ease-in-out;
 
     :last-child{
         margin-right:0px;
@@ -201,6 +202,9 @@
 .slider-item{
     width:60px;
     margin-right:10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     img{
         width:100%;
