--- a/views/about.hbs
+++ b/views/about.hbs
@@ -42,7 +42,7 @@
                             <img src="images/left-arrow.svg" alt="left-arrow">
                         </div>
                         <div class="slider-container">
-                            <div class="slider-items">
+                            <div class="slider-items" style="left:0;">
                                 {{#each techs}}
                                 <a href="technology/{{ID}}" class="slider-item">
                                     <img src="images/{{tech_img}}" alt="{{tech_name}}">
