Added a button to download resume

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -8,9 +8,9 @@
                 <div class="about-container-left-btn-left">
                     <div>CONTACT ME</div>
                 </div>
-                <div class="about-container-left-btn-right" id="resume-btn">
+                <a href="includes/resume.pdf" download="Zavizenov_Gleb_Resume" class="about-container-left-btn-right">
                     <div>DOWNLOAD RESUME</div>
-                </div>
+                </a>
             </div>
         </div>
         <div class="about-container-right">
