--- a/sass/modules/_about.scss
+++ b/sass/modules/_about.scss
@@ -71,6 +71,7 @@
     border: 1px solid $black;
     transition: 0.7s all ease-in-out;
     margin-top:15px;
+    text-decoration: none;
 
     div{
         color:$black;
