Finished mobile navigation

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,5 +9,6 @@
 
 // Importing modules
 @import 'modules/_nav-bar';
+@import 'modules/_mobile-nav';
 @import 'modules/_footer';
 @import 'modules/_technology-popup';
