--- a/views/adaptive-layout.hbs
+++ b/views/adaptive-layout.hbs
@@ -12,6 +12,16 @@
     <title>Zavizenov Gleb</title>
 </head>
 <body class="adaptive-body">
+    <div class="mobile-nav">
+        <div class="nav-close">
+            <img src="images/close-btn.svg" alt="close button">
+        </div>
+        <div class="mobile-nav-container">
+            <a href="/" class="mobile-nav-link">Home</a>
+            <a href="/projects" class="mobile-nav-link">Portfolio</a>
+            <a href="/about" class="mobile-nav-link">About Me</a>
+        </div>
+    </div>
     {{!-- Header --}}
     <header>
         <div class="header-container">
