Finished design for contact form

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -27,3 +27,23 @@
         {{/each}}
     </div>
 </div>
+
+{{!-- Contact form --}}
+<div class="contact-popup">
+    <div class="close-contacts">
+        <svg viewBox="0 0 202 202" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <rect x="1" y="1" width="200" height="200" stroke="#1A1A1A"/>
+            <path d="M161 34L168.071 41.0711L40.7919 168.35L33.7208 161.279L161 34Z" fill="#1A1A1A"/>
+            <path d="M34 41L41.0711 33.9289L168.35 161.208L161.279 168.279L34 41Z" fill="#1A1A1A"/>
+        </svg>
+    </div>
+    <div class="contacts-popup-container">
+        <h2 class="contacts-popup-heading">Get in touch</h2>
+        <form class="contacts-popup-form" action="">
+            <input type="text" placeholder="Your name">
+            <input type="text" placeholder="Your email">
+            <textarea placeholder="Your message"></textarea>
+            <button type="submit">SEND</button>
+        </form>
+    </div>
+</div>
