--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,3 +12,4 @@
 @import 'modules/_mobile-nav';
 @import 'modules/_footer';
 @import 'modules/_technology-popup';
+@import 'modules/_contacts-popup';
