Finished video popup and updated db

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,3 +13,4 @@
 @import 'modules/_footer';
 @import 'modules/_technology-popup';
 @import 'modules/_contacts-popup';
+@import 'modules/_video-popup';
