--- a/views/home.hbs
+++ b/views/home.hbs
@@ -47,3 +47,17 @@
         </form>
     </div>
 </div>
+
+{{!-- Video popup --}}
+<div class="video-popup">
+    <div class="video-popup-close">
+        <svg viewBox="0 0 202 202" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <rect x="1" y="1" width="200" height="200" stroke="#f7f7f7"/>
+            <path d="M161 34L168.071 41.0711L40.7919 168.35L33.7208 161.279L161 34Z" fill="#f7f7f7"/>
+            <path d="M34 41L41.0711 33.9289L168.35 161.208L161.279 168.279L34 41Z" fill="#f7f7f7"/>
+        </svg>
+    </div>
+    <div class="video-popup-container">
+        <video src="includes/showreel.mp4" controls muted></video>
+    </div>
+</div>
