--- a/views/project-layout.hbs
+++ b/views/project-layout.hbs
@@ -78,6 +78,15 @@
             </div>
         </div>
     </footer>
+    {{!-- Credits for icons --}}
+    <div class="hidden">Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+    <div class="hidden">Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+    <div class="hidden">Chris Williams [Public domain], <a href="https://commons.wikimedia.org/wiki/File:Unofficial_JavaScript_logo_2.svg">via Wikimedia Commons</a></div>
+    <div class="hidden"><a title="Evan You, https://github.com/yyx990803 [CC BY 4.0 (https://creativecommons.org/licenses/by/4.0)], via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File:Vue.js_Logo_2.svg"><img width="512" alt="Vue.js Logo 2" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Vue.js_Logo_2.svg/512px-Vue.js_Logo_2.svg.png"></a></div>
+    <div class="hidden">Figma [Public domain], <a href="https://commons.wikimedia.org/wiki/File:Figma-logo.svg">via Wikimedia Commons</a></div>
+    <div class="hidden">Adobe Systems [Public domain], <a href="https://commons.wikimedia.org/wiki/File:Adobe_XD_CC_icon.svg">via Wikimedia Commons</a></div></div>
+    <div class="hidden">http://sass-lang.com/ [Public domain], <a href="https://commons.wikimedia.org/wiki/File:Sass_Logo_Color.svg">via Wikimedia Commons</a></div>
+    <div class="hidden"><div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></div>
     {{!-- Scripts --}}
     <script src="../js/main.js"></script>
 </body>
