--- a/views/adaptive-layout.hbs
+++ b/views/adaptive-layout.hbs
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" href="images/favicon.png">
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
     <title>Zavizenov Gleb</title>
 </head>
 <body class="adaptive-body">
