--- a/views/home.hbs
+++ b/views/home.hbs
@@ -58,6 +58,10 @@
         </svg>
     </div>
     <div class="video-popup-container">
-        <video src="includes/showreel.mp4" controls muted></video>
+        <video controls muted>
+            <source src="includes/showreel.mp4" type="video/mp4">
+            <source src="includes/showreel.webm" type="video/webm">
+            <source src="includes/showreel.ogv" type="video/ogv">
+        </video>
     </div>
 </div>
